--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+<section class="intro">
+  <h1>🐒 Welcome to Brainrot Surfers! 🧠</h1>
+  <p>
+    Dive into the wild and chaotic world of <strong>Brainrot Surfers</strong> — the endless runner where you don't just dodge obstacles… you collect <em>brainrot aura</em> to unlock the most bizarre, legendary, and hilarious pets on the internet.
+  </p>
+  <p>
+    From the mysterious <strong>Tung Tung Sahur</strong> to the twirling <strong>Ballerina Cappuccino</strong>, each pet brings their own brainrot energy. Ready to collect them all?
+  </p>
+</section>  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Brainrot Surfers – Pets</title>
   <style>
