--- a/index.html
+++ b/index.html
@@ -14,7 +14,19 @@
   <title>Brainrot Surfers – Pets</title>
   <style>
     body {
-      margin: 0;
+<body>
+  <nav>
+    <a href="index.html">Home</a> |
+    <a href="about.html">About</a>
+  </nav>
+
+  <!-- 👇 Add the intro right here -->
+  <section class="intro">
+    ...
+  </section>
+
+  <div id="pets-container"></div>
+</body>      margin: 0;
       font-family: 'Segoe UI', sans-serif;
       background: linear-gradient(to bottom, #1a1a2e, #16213e);
       color: #ffffff;
